Fixed the issues with buttons overlapping face on mobile

--- a/src/app/home-page/components/banner-image/banner-image.component.scss
+++ b/src/app/home-page/components/banner-image/banner-image.component.scss
@@ -27,9 +27,10 @@
 
     .buttons {
       flex: none;
-      flex-wrap: wrap;
 
       .drop-shadow {
+        display: inline-block;
+        height: 100%;
         background-color: rgba(0, 0, 0, 0.5);
         border-radius: 4px;
       }
